# mcp-run-py

./: README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: hello_world.py  hello_world_sse.py  hello_world_stdio.py  mcp_client.py  mcp_server.py  profiles.py  search.py  tasks.py
mcp_run/: __init__.py  api.py  cache.py  client.py  mcp_protocol.py  plugin.py  profile.py  task.py  types.py
tests/: test_client.py
