[project]
name = "mcp-run"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "extism>=1.0.4",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.0",
    "ruff>=0.9.4",
]
